Grammar update (#3)
* Follow guidelines for .idea project

https://intellij-support.jetbrains.com/hc/en-us/articles/206544839

* Sync grammar with compiler version

* Fix bind parameter highlight, contract color removed

* Rearange bnf rules, remove old match rule

* Version 0.1.0, change notes

* Auto-resolve testData path, update readme